--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.38"
     kapt "com.google.dagger:hilt-android-compiler:2.37"
 
+    // Leak Canary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
+
 }
